Fix build for robolectric